apps/appflowy/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: appflowy
  labels:
    name: appflowy
    app: appflowy-cloud
