apps/appflowy/07-appflowy-worker.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appflowy-worker
  namespace: appflowy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appflowy-worker
  template:
    metadata:
      labels:
        app: appflowy-worker
    spec:
      nodeSelector:
        kubernetes.io/hostname: aurora
      containers:
      - name: appflowy-worker
        image: appflowyinc/appflowy_worker:latest
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
